# studybuddy-agent-openai-sdk

./: .env  README.md  output.md  pyproject.toml
src/studybuddy/: __init__.py  studybuddy.py
